changed link color and changed footer message

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </section>
   <footer id="contact">
     <div class="content-wrapper">
-      <h2>Let's Keep in Touch!</h2>
+      <h2>Let's Get in Touch!</h2>
 
       <!-- Social media and contact links-->
       <div class="contact-info">
@@ -49,7 +49,7 @@
 
       </div>
 
-      <p>Nga lufuno
+      <p>With
         <span id="love"></span> 2018 V.I.C.T</p>
       <a href="#" target="_blank">
         <i class="fab fa-facebook-square"></i>
