--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Vendas In CapeTown | Home</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/simple-grid.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
@@ -12,19 +14,19 @@
 </head>
 
 <body>
-  <header>
-    <h1 class="center" style="color: red;">
-      <i class="fas fa-exclamation-triangle"></i>Please note that this project is still under development
-      <i class="fas fa-exclamation-triangle"></i>
-    </h1>
-    <nav class="center">
+  
+  <div class="row inline-block" id="nav">
+      <div class="header-wrapper">
+    <div  class="col-4"><img id="logo" src="img/VendasInCapeTown.png"></div>
+    
+    <div class="col-8 links inline-block">
       <a href="#home">Home</a>
       <a href="#track-order">Track Order</a>
       <a href="gallery.html">Gallery</a>
       <a href="#about">About</a>
-
-    </nav>
-  </header>
+    </div>
+    </div>
+  </div>
 
   <section class="order-form">
     <div class="content-wrapper">
